--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 AUTH0_CLIENT_ID=4p3SIDzPf50lm2pZx9RDI1gDsdHacbme
 AUTH0_DOMAIN=vnzquest.eu.auth0.com
 AUTH0_CLIENT_SECRET=CZFADIVcIlJCH_pdeLSEIEpZcFXTqYXOmGwdnYyoG6HPAdpP40v4emuBK_sg5bts
-AUTH0_CALLBACK_URL=http://olimp-project-backend/
+AUTH0_CALLBACK_URL=https://olimp-project.herokuapp.com/
 AUTH0_AUDIENCE=
